--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_SERVER_URL=http://localhost:3000
-# REACT_APP_SERVER_URL= production server url
+# REACT_APP_SERVER_URL=http://localhost:3000
+REACT_APP_SERVER_URL=https://pro-task-api.herokuapp.com/
