--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apexcharts": "^3.21.0",
+    "axios": "^0.27.2",
     "date-fns": "^2.16.1",
     "react": "^16.13.1",
     "react-apexcharts": "^1.3.7",
