--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.17.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^5.16.0",
     "@mui/lab": "^5.0.0-alpha.175",
     "@mui/material": "^5.16.0",
     "@mui/styles": "^5.18.0",
-    "@mui/x-date-pickers": "^7.0.0",
+    "@mui/x-date-pickers": "^7.29.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "apexcharts": "^4.0.0",
     "axios": "^1.7.7",
-    "date-fns": "^3.6.0",
+    "date-fns": "^2.30.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.3.7",
     "react-dom": "^18.3.1",
